--- a/GTG/plugins/export/export.ui
+++ b/GTG/plugins/export/export.ui
@@ -11,7 +11,6 @@
     <child>
       <object class="GtkVBox" id="vbox3">
         <property name="visible">True</property>
-        <property name="orientation">vertical</property>
         <child>
           <object class="GtkHBox" id="hbox11">
             <property name="visible">True</property>
@@ -19,93 +18,177 @@
             <property name="spacing">15</property>
             <child>
               <object class="GtkVBox" id="vbox111">
-                <property name="width_request">200</property>
                 <property name="visible">True</property>
-                <property name="orientation">vertical</property>
                 <child>
-                  <object class="GtkLabel" id="export_label2">
+                  <object class="GtkHBox" id="hbox111111">
                     <property name="visible">True</property>
-                    <property name="yalign">0.46000000834465027</property>
-                    <property name="label" translatable="yes">Select an export template.
-Only tasks in the current 
-view will be exported.</property>
-                    <property name="justify">center</property>
+                    <child>
+                      <object class="GtkLabel" id="label11111111111111">
+                        <property name="visible">True</property>
+                        <property name="yalign">0.10000000149011612</property>
+                        <property name="label" translatable="yes">1</property>
+                        <attributes>
+                          <attribute name="gravity-hint" value="strong"/>
+                          <attribute name="scale" value="6.000000"/>
+                        </attributes>
+                      </object>
+                      <packing>
+                        <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkVBox" id="vbox44444444444">
+                        <property name="visible">True</property>
+                        <child>
+                          <object class="GtkLabel" id="label22222222222222">
+                            <property name="visible">True</property>
+                            <property name="xalign">0</property>
+                            <property name="yalign">0</property>
+                            <property name="ypad">10</property>
+                            <property name="label" translatable="yes">&lt;b&gt;Select which tasks you want to export:&lt;/b&gt;
+If you want to export ony the tasks tagged with a particular tag,
+just select the tag in GTG's main window. You may need to press F9 to see all the tags.</property>
+                            <property name="use_markup">True</property>
+                            <property name="justify">fill</property>
+                            <property name="wrap">True</property>
+                            <property name="width_chars">30</property>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="position">0</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkRadioButton" id="export_finished_last_week_rb">
+                            <property name="label" translatable="yes">Tasks finished last week</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">False</property>
+                            <property name="active">True</property>
+                            <property name="draw_indicator">True</property>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="position">1</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkRadioButton" id="export_all_finished_rb">
+                            <property name="label" translatable="yes">All finished tasks</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">False</property>
+                            <property name="active">True</property>
+                            <property name="draw_indicator">True</property>
+                            <property name="group">export_finished_last_week_rb</property>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="position">2</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkRadioButton" id="export_all_active_rb">
+                            <property name="label" translatable="yes">All active tasks</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">False</property>
+                            <property name="active">True</property>
+                            <property name="draw_indicator">True</property>
+                            <property name="group">export_finished_last_week_rb</property>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="position">3</property>
+                          </packing>
+                        </child>
+                      </object>
+                      <packing>
+                        <property name="position">1</property>
+                      </packing>
+                    </child>
                   </object>
                   <packing>
-                    <property name="padding">15</property>
                     <property name="position">0</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkComboBox" id="export_combo_templ">
-                    <property name="width_request">150</property>
+                  <object class="GtkAlignment" id="alignment2">
                     <property name="visible">True</property>
-                    <signal name="changed" handler="on_export_combo_templ_changed"/>
+                    <property name="top_padding">20</property>
+                    <child>
+                      <object class="GtkHBox" id="hbox13443">
+                        <property name="visible">True</property>
+                        <child>
+                          <object class="GtkLabel" id="label1343434">
+                            <property name="visible">True</property>
+                            <property name="yalign">0.10000000149011612</property>
+                            <property name="label" translatable="yes">2
+</property>
+                            <attributes>
+                              <attribute name="gravity-hint" value="strong"/>
+                              <attribute name="scale" value="6.000000"/>
+                            </attributes>
+                          </object>
+                          <packing>
+                            <property name="position">0</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkVBox" id="vbox1343">
+                            <property name="visible">True</property>
+                            <child>
+                              <object class="GtkLabel" id="label1lalalla">
+                                <property name="visible">True</property>
+                                <property name="xalign">0</property>
+                                <property name="yalign">0</property>
+                                <property name="label" translatable="yes">&lt;b&gt;Select an export template:&lt;/b&gt;</property>
+                                <property name="use_markup">True</property>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="position">0</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkComboBox" id="export_combo_templ">
+                                <property name="visible">True</property>
+                                <signal name="changed" handler="on_export_combo_templ_changed"/>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="padding">10</property>
+                                <property name="position">1</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkLabel" id="label_description">
+                                <property name="visible">True</property>
+                                <property name="xalign">0</property>
+                                <property name="yalign">0</property>
+                                <property name="xpad">10</property>
+                                <property name="ypad">10</property>
+                                <property name="use_markup">True</property>
+                                <property name="justify">fill</property>
+                                <property name="wrap">True</property>
+                                <property name="wrap_mode">word-char</property>
+                                <property name="width_chars">30</property>
+                              </object>
+                              <packing>
+                                <property name="position">2</property>
+                              </packing>
+                            </child>
+                          </object>
+                          <packing>
+                            <property name="position">1</property>
+                          </packing>
+                        </child>
+                      </object>
+                    </child>
                   </object>
                   <packing>
-                    <property name="expand">False</property>
-                    <property name="fill">False</property>
-                    <property name="padding">30</property>
                     <property name="position">1</property>
                   </packing>
-                </child>
-                <child>
-                  <object class="GtkRadioButton" id="export_all_active_rb">
-                    <property name="label" translatable="yes">All active tasks</property>
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">False</property>
-                    <property name="has_tooltip">True</property>
-                    <property name="tooltip_text" translatable="yes">Include all open tasks in the current view</property>
-                    <property name="active">True</property>
-                    <property name="draw_indicator">True</property>
-                  </object>
-                  <packing>
-                    <property name="position">2</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkRadioButton" id="export_finished_last_week_rb">
-                    <property name="label" translatable="yes">Tasks finished last week</property>
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">False</property>
-                    <property name="has_tooltip">True</property>
-                    <property name="tooltip_text" translatable="yes">Include only closed tasks with a closed date within the past seven days.</property>
-                    <property name="active">True</property>
-                    <property name="draw_indicator">True</property>
-                    <property name="group">export_all_active_rb</property>
-                  </object>
-                  <packing>
-                    <property name="position">3</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkRadioButton" id="export_all_finished_rb">
-                    <property name="label" translatable="yes">All finished tasks</property>
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">False</property>
-                    <property name="has_tooltip">True</property>
-                    <property name="tooltip_text" translatable="yes">Include all of the closed tasks from the current view.</property>
-                    <property name="active">True</property>
-                    <property name="draw_indicator">True</property>
-                    <property name="group">export_all_active_rb</property>
-                  </object>
-                  <packing>
-                    <property name="position">4</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkLabel" id="label212">
-                    <property name="visible">True</property>
-                  </object>
-                  <packing>
-                    <property name="position">5</property>
-                  </packing>
-                </child>
-                <child>
-                  <placeholder/>
                 </child>
               </object>
               <packing>
@@ -124,42 +207,46 @@ view will be exported.</property>
             </child>
           </object>
           <packing>
-            <property name="expand">False</property>
-            <property name="fill">False</property>
             <property name="position">0</property>
           </packing>
         </child>
         <child>
-          <object class="GtkHBox" id="hbox30">
-            <property name="height_request">50</property>
+          <object class="GtkAlignment" id="alignment1">
             <property name="visible">True</property>
-            <property name="border_width">12</property>
-            <property name="spacing">23</property>
+            <property name="yalign">1</property>
             <child>
-              <object class="GtkButton" id="export_btn_open">
-                <property name="label">gtk-open</property>
+              <object class="GtkHBox" id="hbox30">
+                <property name="height_request">50</property>
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
-                <property name="use_stock">True</property>
-                <signal name="clicked" handler="on_export_btn_open_clicked"/>
+                <property name="border_width">12</property>
+                <property name="spacing">23</property>
+                <child>
+                  <object class="GtkButton" id="export_btn_open">
+                    <property name="label">gtk-open</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">True</property>
+                    <property name="use_stock">True</property>
+                    <signal name="clicked" handler="on_export_btn_open_clicked"/>
+                  </object>
+                  <packing>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkButton" id="export_btn_save">
+                    <property name="label">gtk-save</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">True</property>
+                    <property name="use_stock">True</property>
+                    <signal name="clicked" handler="on_export_btn_save_clicked"/>
+                  </object>
+                  <packing>
+                    <property name="position">1</property>
+                  </packing>
+                </child>
               </object>
-              <packing>
-                <property name="position">0</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkButton" id="export_btn_save">
-                <property name="label">gtk-save</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
-                <property name="use_stock">True</property>
-                <signal name="clicked" handler="on_export_btn_save_clicked"/>
-              </object>
-              <packing>
-                <property name="position">1</property>
-              </packing>
             </child>
           </object>
           <packing>
@@ -177,7 +264,6 @@ view will be exported.</property>
     <child>
       <object class="GtkVBox" id="vbox1">
         <property name="visible">True</property>
-        <property name="orientation">vertical</property>
         <child>
           <object class="GtkLabel" id="label1">
             <property name="visible">True</property>
@@ -191,7 +277,6 @@ view will be exported.</property>
         <child>
           <object class="GtkVBox" id="vbox2">
             <property name="visible">True</property>
-            <property name="orientation">vertical</property>
             <child>
               <object class="GtkCheckButton" id="pref_chbox_menu">
                 <property name="label" translatable="yes">Put an entry in the Plugins menu</property>
